--- a/repository/src/main/resources/alfresco/templates/webscripts/org/orderofthebee/support-tools/admin/ootbee-support-tools/solr-tracking.get_es.properties
+++ b/repository/src/main/resources/alfresco/templates/webscripts/org/orderofthebee/support-tools/admin/ootbee-support-tools/solr-tracking.get_es.properties
@@ -27,6 +27,24 @@ solr-tracking.section.approx.transaction.description=N\u00famero approximado de 
 solr-tracking.section.memory.usage.title=Uso de memoria
 solr-tracking.section.memory.usage.description=Uso de memoria actual. Nota: este valor puede variar debido al uso de memoria transitoria en el procesamiento en un segundo plano. El valor no incluye cach\u00e9s relacionadas con Lucene.
 
+solr-tracking.section.detail.title=Estado de seguimiento detallado
+solr-tracking.section.detail.metadata.title=Metadata Tracker en curso
+solr-tracking.section.detail.metadata.description=Search est\u00e1 recuperando nodos y propiedades del Repositorio.
+solr-tracking.section.detail.content.title=Content Tracker en curso
+solr-tracking.section.detail.content.description=Search est\u00e1 recuperando contenido de texto de los documentos del Repositorio.
+solr-tracking.section.detail.acl.title=ACL Tracker en curso
+solr-tracking.section.detail.acl.description=Search est\u00e1 recuperando permisos (ACLs) del Repositorio.
+solr-tracking.section.detail.cascade.title=Cascade Tracker en curso
+solr-tracking.section.detail.cascade.description=Search est\u00e1 recuperando informaci\u00f3n de rutas y cambios en rutas del Repositorio.
+solr-tracking.section.detail.metadata.count.title=Transacciones approx. a indexar
+solr-tracking.section.detail.metadata.count.description=N\u00famero approximado de transacciones que contienen propiedades pendientes que requieren indexaci\u00f3n.
+solr-tracking.section.detail.content.count.title=N\u00famero de documentos con contenido a indexar
+solr-tracking.section.detail.content.count.description=N\u00famero de documentos que contienen contenido (texo) que require indexaci\u00f3n.
+solr-tracking.section.detail.acl.count.title=Transacciones approx. a indexar
+solr-tracking.section.detail.acl.count.description=N\u00famero approximado de transacciones que contienen permisos pendientes que requieren indexaci\u00f3n.
+solr-tracking.section.detail.cascade.count.title=N\u00famero de documentos con rutas a indexar
+solr-tracking.section.detail.cascade.count.description=N\u00famero de documentos con rutas o cambios en rutas a indexar.
+
 solr-tracking.gibibytes={0} GiB
 solr-tracking.mebibytes={0} MiB
 solr-tracking.kibibytes={0} KiB
